--- a/app/src/main/res/layout/layout_facebook_login.xml
+++ b/app/src/main/res/layout/layout_facebook_login.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     
     <Button
+        android:id="@+id/btnLoginFacebook"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/amberDarkest"
