--- a/app/src/main/res/layout/layout_main_sync.xml
+++ b/app/src/main/res/layout/layout_main_sync.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     
     <Button
+        android:id="@+id/btnSynNow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/deepPurple"
