--- a/app/src/main/res/layout/layout_permission_request.xml
+++ b/app/src/main/res/layout/layout_permission_request.xml
@@ -3,8 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/spacing_normal"
+        android:text="@string/missing_permissions_description"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.3" />
     
     <Button
+        android:id="@+id/btnGrantPermissions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/amber"
